[package]
name = "grantable-io"
version = "0.1.0"
edition = "2024"

[features]
default = []

embedded-io-async-060 = ["dep:embedded-io-async-060", "_any_embedded_io_async"]
embedded-io-async-061 = ["dep:embedded-io-async-061", "_any_embedded_io_async"]
embedded-io-async-070 = ["dep:embedded-io-async-070", "_any_embedded_io_async"]

_any_embedded_io_async = []

unsafe-assume-single-core = ["portable-atomic/unsafe-assume-single-core"]
critical-section = ["portable-atomic/critical-section", "maitake-sync/critical-section"]

[dependencies]
portable-atomic = "1.11.1"
maitake-sync = { version = "0.2.2", default-features = false, features = ["no-cache-pad"] }

embedded-io-async-060 = {version = "0.6.0", package = "embedded-io-async", optional = true }
embedded-io-async-061 = {version = "0.6.1", package = "embedded-io-async", optional = true }
embedded-io-async-070 = {version = "0.7.0", package = "embedded-io-async", optional = true }

[dev-dependencies]
futures-executor = { version = "0.3.31", features = ["thread-pool"] }
